@@ -9,7 +9,11 @@ if not exist %springloadedfile% (
   mvn validate -Psetup
 )
 
-set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G
+:: Use these settings if you're using JDK7
+:: set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G -XX:PermSize=300m
 
-mvn install -Prun -nsu
-:: mvn install -Prun 
+:: Spring loaded does not work very well with 5.1 at the moment, breaks the H2 db after first run and then restart
+:: set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G
+set MAVEN_OPTS=-noverify -Xms256m -Xmx2G
+
+mvn clean install -Prun -nsu
