@@ -13,7 +13,12 @@ if not exist %springloadedfile% (
   mvn validate -Psetup
 )
 
-set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G
+:: Use these settings if you're using JDK7
+:: set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G -XX:PermSize=300m
+
+:: Spring loaded does not work very well with 5.1 at the moment, breaks the H2 db after first run and then restart
+::set MAVEN_OPTS=-javaagent:"%springloadedfile%" -noverify -Xms256m -Xmx2G
+set MAVEN_OPTS=-noverify -Xms256m -Xmx2G
 
 mvn integration-test -Pamp-to-war -nsu
-:: mvn integration-test -Pamp-to-war 
+
